fix problem with 'Experience' title on small screen

--- a/src/client/pages/Resume/components/ResumeTabWrapper/ResumeTabWrapper.scss
+++ b/src/client/pages/Resume/components/ResumeTabWrapper/ResumeTabWrapper.scss
@@ -1,9 +1,14 @@
 .resume-tab {
-  &__title {
+  &__title-container {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
     margin-right: 10%;
+  }
+
+  &__title {
+    min-width: 200px;
   }
 
   &__expand-all-button {
